--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "test:prepare": "scripts/prepareTests.bash",
     "build:link": "yarn build && cd build && yarn link",
     "build:watch": "yarn build && tsc --watch",
-    "build": "scripts/build.bash",
-    "prepare": "npm run build"
+    "build": "scripts/build.bash"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.8",
